# Exgine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  windows.cmake
.github/workflows/: build.yml
demo/scripts/: hello.lua
include/exgine/: camera.h  datastore.h  engine.h  framebuffer.h  gameobject.h  lualoader.h  renderer.h  scene.h  shader.h
plugins/editor/: dockspace.lua  hirearchy.lua  posthook.lua  prehook.lua
scripts/: game.lua
src/: camera.cpp  datastore.cpp  engine.cpp  framebuffer.cpp  lualoader.cpp  renderer.cpp  scene.cpp  shader.cpp  starter.cpp
